Made header much more responsive and fixed spacing

--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-left: 80px;
-    gap: 80px;
+    padding-left: 3rem;
+    gap: 1.75rem;
 }
 
 .search-input {
@@ -58,8 +58,8 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-right: 80px;
-    gap: 80px;
+    padding-right: 3rem;
+    gap: 1.75rem;
 }
 
 .profile img{
@@ -90,16 +90,16 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-left: 80px;
-    gap: 80px;
+    padding-left: 3rem;
+    gap: 1.5rem;
 }
 
 .buttons {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 40px;
-    padding-right: 80px;
+    gap: 1.5rem;
+    padding-right: 3rem;
 }
 
 button {
